--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings | 网站设置
 title: Hey-BlingBling's Blog
 SEOTitle: Hey-BlingBling's Blog
-header-img: img/home-bg.JPG
+header-img: img/home-bg.jpg
 email: qin_haibin@icloud.com
 description: "Hey-BlingBling's Blog"
 keyword: "Hey-BlingBling's Blog and Diary"
